<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sqlite.SqliteActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/insert"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/btn_display"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@id/user_password"
        app:layout_constraintTop_toBottomOf="@id/user_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/display"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"
        app:layout_constraintStart_toEndOf="@id/btn_insert"
        app:layout_constraintTop_toBottomOf="@id/user_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/btn_update"
        app:layout_constraintStart_toEndOf="@id/btn_display"
        app:layout_constraintTop_toBottomOf="@id/user_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@id/btn_delete"
        app:layout_constraintTop_toBottomOf="@id/user_password" />

</androidx.constraintlayout.widget.ConstraintLayout>